--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit>=1.30.0
+streamlit>=1.28.0
+pdfplumber>=0.10.0
 pandas>=2.0.0
 openpyxl>=3.1.0
-pdfplumber>=0.10.0
-selenium>=4.15.0
-webdriver-manager>=4.0.0
+pillow>=10.0.0
+anthropic>=0.34.0
